--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,14 +78,6 @@ jobs:
        make -j `nproc`;
        sudo make install;
 
-   - name: Post build creation of directory and copying files.
-     working-directory: OpenLane
-     shell: bash
-     run: |
-       ./flow.tcl -design conway -init_design_config -add_to_designs
-       yosys -p "read_verilog -sv ../cores/conway/src/conway.sv; write_verilog designs/conway/conway.v" # Convert file to verilog
-       cp designs/conway/conway.v designs/conway/
-
    - name: Install Volare and SkyWater SKY130 PDK files 
      working-directory: OpenLane
      shell: bash
@@ -95,16 +87,25 @@ jobs:
        export PDK_ROOT=/home/runner/work/riscy_cores/riscy_cores/OpenLane/pdks;
        volare enable --pdk sky130
 
-   - name: Synthesize and generate PNG
-     working-directory: OpenLane
-     run: |
-       ./flow.tcl -overwrite -design conway -run_path runs -tag run$(date +"%m%d") 
-       ./tt/tt_tool.py --run-dir runs/run$(date +"%m%d") --create-png
-
-   - name: Upload images
-     uses: edunad/actions-image@v2.0.0
-     with:
-       path: '/home/runner/work/riscy_cores/riscy_cores/OpenLane/gds_render.png'
-       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       title: 'Chip render'
+      #   - name: Post build creation of directory and copying files.
+      #     working-directory: OpenLane
+      #     shell: bash
+      #     run: |
+      #       ./flow.tcl -design conway -init_design_config -add_to_designs
+      #       yosys -p "read_verilog -sv ../cores/conway/src/conway.sv; write_verilog designs/conway/conway.v" # Convert file to verilog
+      #       cp designs/conway/conway.v designs/conway/
+      #
+      #
+      #   - name: Synthesize and generate PNG
+      #     working-directory: OpenLane
+      #     run: |
+      #       ./flow.tcl -overwrite -design conway -run_path runs -tag run$(date +"%m%d") 
+      #       ./tt/tt_tool.py --run-dir runs/run$(date +"%m%d") --create-png
+      #
+      #   - name: Upload images
+      #     uses: edunad/actions-image@v2.0.0
+      #     with:
+      #       path: '/home/runner/work/riscy_cores/riscy_cores/OpenLane/gds_render.png'
+      #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #       title: 'Chip render'
 
