--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,12 +41,15 @@ jobs:
 
     - name: Change ownership of verilator
       run: | 
+        sudo mkdir /usr/local/share/verilator/bin/
+        sudo chown -R ${whoami}:${whoami} /usr/local/share/verilator/bin/
         sudo chown -R ${whoami}:${whoami} ./verilator
-        sudo chmod +x ./verilator/verilator
+        cp -r ./verilator/* /usr/local/share/verilator/bin/
+        sudo chmod +x /usr/local/share/verilator/bin/verilator
 
     - name: Run the testbench
       run: | 
-        ./verilator/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
+         /usr/local/share/verilator/bin/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
         ./obj_dir/V${{ matrix.component }}_tb
 
   conway:
@@ -65,10 +68,13 @@ jobs:
 
     - name: Change ownership of verilator
       run: | 
+        sudo mkdir /usr/local/share/verilator/bin/
+        sudo chown -R ${whoami}:${whoami} /usr/local/share/verilator/bin/
         sudo chown -R ${whoami}:${whoami} ./verilator
-        sudo chmod +x ./verilator/verilator
+        cp -r ./verilator/* /usr/local/share/verilator/bin/
+        sudo chmod +x /usr/local/share/verilator/bin/verilator
 
     - name: run the testbench
       run: | 
-        ./verilator/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/conway/tests/conway_tb.sv cores/conway/src/conway.sv;
+        /usr/local/share/verilator/bin/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/conway/tests/conway_tb.sv cores/conway/src/conway.sv;
         ./obj_dir/Vconway_tb
