--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,10 +42,11 @@ jobs:
     - name: Change ownership of verilator
       run: | 
         sudo mkdir /usr/local/share/verilator/bin/;
-        sudo chown -R ${whoami}:${whoami} /usr/local/share/verilator/bin/;
-        sudo chown -R ${whoami}:${whoami} ./verilator;
+        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/;
+        sudo chown -R $(whoami):$(whoami) ./verilator;
         cp -r ./verilator/* /usr/local/share/verilator/bin/;
-        sudo chmod +x /usr/local/share/verilator/bin/verilator;
+        chmod +x /usr/local/share/verilator/bin/verilator;
+
     - name: Run the testbench
       run: | 
          /usr/local/share/verilator/bin/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
@@ -71,7 +72,8 @@ jobs:
         sudo chown -R ${whoami}:${whoami} /usr/local/share/verilator/bin/;
         sudo chown -R ${whoami}:${whoami} ./verilator;
         cp -r ./verilator/* /usr/local/share/verilator/bin/;
-        sudo chmod +x /usr/local/share/verilator/bin/verilator;
+        chmod +x /usr/local/share/verilator/bin/verilator;
+
     - name: run the testbench
       run: | 
         /usr/local/share/verilator/bin/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/conway/tests/conway_tb.sv cores/conway/src/conway.sv;
