Test: make executable

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,8 +44,8 @@ jobs:
         sudo mkdir /usr/local/share/verilator/bin/;
         sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/;
         sudo chown -R $(whoami):$(whoami) ./verilator;
-        cp -r ./verilator/* /usr/local/share/verilator/bin/;
-        chmod +x /usr/local/share/verilator/bin/verilator;
+        #cp -r ./verilator/* /usr/local/share/verilator/bin/;
+        #chmod +x /usr/local/share/verilator/bin/verilator;
 
     - name: Run the testbench
       run: | 
@@ -69,10 +69,10 @@ jobs:
     - name: Change ownership of verilator
       run: | 
         sudo mkdir /usr/local/share/verilator/bin/;
-        sudo chown -R ${whoami}:${whoami} /usr/local/share/verilator/bin/;
-        sudo chown -R ${whoami}:${whoami} ./verilator;
-        cp -r ./verilator/* /usr/local/share/verilator/bin/;
-        chmod +x /usr/local/share/verilator/bin/verilator;
+        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/;
+        sudo chown -R $(whoami):$(whoami) ./verilator;
+        #cp -r ./verilator/* /usr/local/share/verilator/bin/;
+        #chmod +x /usr/local/share/verilator/bin/verilator;
 
     - name: run the testbench
       run: | 
