--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,17 +41,16 @@ jobs:
 
     - name: Change ownership of verilator
       run: | 
-        sudo mkdir /usr/local/share/verilator/bin/ &&
-        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ &&
-        sudo chown -R $(whoami):$(whoami) ./verilator &&
-        cp -r ./verilator/* /usr/local/share/verilator/bin/ &&
+        sudo mkdir /usr/local/share/verilator/bin/ 
+        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ 
+        sudo chown -R $(whoami):$(whoami) ./verilator 
+        cp -r ./verilator/* /usr/local/share/verilator/bin/ 
         chmod +x /usr/local/share/verilator/bin/verilator
 
     - name: Run the testbench
       run: | 
-         /usr/local/share/verilator/bin/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
+        ./verilator/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
         ./obj_dir/V${{ matrix.component }}_tb
-
   conway:
     runs-on: ubuntu-latest
     needs: build_verilator
@@ -68,13 +67,13 @@ jobs:
 
     - name: Change ownership of verilator
       run: | 
-        sudo mkdir /usr/local/share/verilator/bin/ &&
-        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ &&
-        sudo chown -R $(whoami):$(whoami) ./verilator &&
-        cp -r ./verilator/* /usr/local/share/verilator/bin/ &&
+        sudo mkdir /usr/local/share/verilator/bin/ 
+        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ 
+        sudo chown -R $(whoami):$(whoami) ./verilator 
+        cp -r ./verilator/* /usr/local/share/verilator/bin/ 
         chmod +x /usr/local/share/verilator/bin/verilator
 
     - name: run the testbench
       run: | 
-        /usr/local/share/verilator/bin/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/conway/tests/conway_tb.sv cores/conway/src/conway.sv;
+        ./verilator/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/conway/tests/conway_tb.sv cores/conway/src/conway.sv;
         ./obj_dir/Vconway_tb
