--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Change ownership of verilator
       run: | 
-        sudo mkdir /usr/local/share/verilator/bin/ 
+        sudo mkdir -P /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) ./verilator 
         cp -r ./verilator/* /usr/local/share/verilator/bin/ 
@@ -51,6 +51,7 @@ jobs:
       run: | 
         /usr/local/share/verilator/bin/verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
         ./obj_dir/V${{ matrix.component }}_tb
+
   conway:
     runs-on: ubuntu-latest
     needs: build_verilator
@@ -67,7 +68,7 @@ jobs:
 
     - name: Change ownership of verilator
       run: | 
-        sudo mkdir /usr/local/share/verilator/bin/ 
+        sudo mkdir -P /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) ./verilator 
         cp -r ./verilator/* /usr/local/share/verilator/bin/ 
