--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Change ownership of verilator
       run: | 
-        sudo mkdir -P /usr/local/share/verilator/bin/ 
+        sudo mkdir -p /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) ./verilator 
         cp -r ./verilator/* /usr/local/share/verilator/bin/ 
@@ -68,7 +68,7 @@ jobs:
 
     - name: Change ownership of verilator
       run: | 
-        sudo mkdir -P /usr/local/share/verilator/bin/ 
+        sudo mkdir -p /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) ./verilator 
         cp -r ./verilator/* /usr/local/share/verilator/bin/ 
