--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,6 +46,7 @@ jobs:
         sudo chown -R $(whoami):$(whoami) ./verilator 
         cp -r ./verilator/* /usr/local/share/verilator/bin/ 
         chmod +x /usr/local/share/verilator/bin/verilator
+        ls /usr/local/share/verilator/bin/
 
     - name: Run the testbench
       run: | 
@@ -73,6 +74,7 @@ jobs:
         sudo chown -R $(whoami):$(whoami) ./verilator 
         cp -r ./verilator/* /usr/local/share/verilator/bin/ 
         chmod +x /usr/local/share/verilator/bin/verilator
+        ls /usr/local/share/verilator/bin/
 
     - name: run the testbench
       run: | 
