--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,7 +45,7 @@ jobs:
         sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) ./verilator 
         cp -r ./verilator/* /usr/local/share/verilator/bin/ 
-        chmod +x /usr/local/share/verilator/bin/*
+        chmod -R +x /usr/local/share/verilator/bin/*
 
     - name: Run the testbench
       run: | 
@@ -72,7 +72,7 @@ jobs:
         sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/bin/ 
         sudo chown -R $(whoami):$(whoami) ./verilator 
         cp -r ./verilator/* /usr/local/share/verilator/bin/ 
-        chmod +x /usr/local/share/verilator/bin/*
+        chmod -R +x /usr/local/share/verilator/bin/*
 
     - name: run the testbench
       run: | 
