--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Simulate riscy chips
+name: Riscy chips
 
 on:
   push:
@@ -6,8 +6,25 @@ on:
       - '**'
 
 jobs:
-  riscy32_single:
+  build_verilator:
     runs-on: ubuntu-latest
+    steps:
+
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Install Verilator Action
+      uses: V0XNIHILI/install-verilator-action@main
+
+    - name: Cache Verilator Binary
+      uses: actions/cache@v4
+      with:
+        path: /usr/local/share/verilator/
+        key: verilator-binary
+
+  riscy32_single_components:
+    runs-on: ubuntu-latest
+    needs: build_verilator
     strategy:
       matrix: 
         component: ["alu", "memory", "register", "control"]
@@ -16,33 +33,85 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install Verilator Action
-      uses: V0XNIHILI/install-verilator-action@v0.0.2
+    - name: Perpare for verilator
+      run: | 
+        sudo mkdir -p /usr/local/share/verilator/
+        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/
+
+    - name: Restore Verilator Binary
+      uses: actions/cache@v4
+      with:
+        path: /usr/local/share/verilator/
+        key: verilator-binary
+
+    - name: Set up verilator
+      run: | 
+        sudo apt-get install ccache
+        chmod -R +x /usr/local/share/verilator/*
+        sudo ln -s /usr/local/share/verilator/bin/verilator /usr/local/bin/verilator
 
     - name: Run the testbench
       run: | 
         verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
         ./obj_dir/V${{ matrix.component }}_tb
 
-      #    - name: Run CPU testbench
-      #      if: success()
-      #      run: | 
-      #        verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/cpu_tb.sv cores/riscy32_single/src/cpu.sv;
-      #        ./obj_dir/Vcpu_tb
 
-
-  conway:
+  riscy32_single_cpu:
     runs-on: ubuntu-latest
+    needs: [build_verilator, riscy32_single_components]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install Verilator Action
-      uses: V0XNIHILI/install-verilator-action@v0.0.2
+    - name: Perpare for verilator
+      run: | 
+        sudo mkdir -p /usr/local/share/verilator/
+        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/
 
-    - name: run the testbench
+    - name: Restore Verilator Binary
+      uses: actions/cache@v4
+      with:
+        path: /usr/local/share/verilator/
+        key: verilator-binary
+
+    - name: Set up verilator
+      run: | 
+        sudo apt-get install ccache
+        chmod -R +x /usr/local/share/verilator/*
+        sudo ln -s /usr/local/share/verilator/bin/verilator /usr/local/bin/verilator
+
+    - name: Run the testbench
+      run: | 
+        verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/cpu_tb.sv cores/riscy32_single/src/cpu.sv;
+        ./obj_dir/Vcpu_tb
+
+  conway:
+    runs-on: ubuntu-latest
+    needs: build_verilator
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Perpare for verilator
+      run: | 
+        sudo mkdir -p /usr/local/share/verilator/
+        sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/
+
+    - name: Restore Verilator Binary
+      uses: actions/cache@v4
+      with:
+        path: /usr/local/share/verilator/
+        key: verilator-binary
+
+    - name: Set up verilator
+      run: | 
+        sudo apt-get install ccache
+        chmod -R +x /usr/local/share/verilator/*
+        sudo ln -s /usr/local/share/verilator/bin/verilator /usr/local/bin/verilator
+
+    - name: Run the testbench
       run: | 
         verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/conway/tests/conway_tb.sv cores/conway/src/conway.sv;
         ./obj_dir/Vconway_tb
-
