--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,25 +50,22 @@ jobs:
         chmod -R +x /usr/local/share/verilator/*
         sudo ln -s /usr/local/share/verilator/bin/verilator /usr/local/bin/verilator
 
+    - name: Setup sooty
+      run: |
+        sudo apt-get install -y python3
+        python3 -m pip install sootty
+
     - name: Run the testbench
       run: | 
         verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
         ./obj_dir/V${{ matrix.component }}_tb
-
-    - name: Setup virtual display & generate png
-      run: |
-        sudo apt-get install -y gtkwave xvfb x11vnc tigervnc-viewer imagemagick
-        export DISPLAY=:99
-        Xvfb :99 -screen 0 1024x768x24 &
-        gtkwave -o waveform.png sim.vcd &
-        sleep 5 # Wait for gtkwave to open
-        pkill gtkwave # Close gtkwave
+        sootty "sim.vcd" --length 100 -o > ${{ matrix.component }}.svg
 
     - name: Upload screenshot as artifact
       uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.component }}
-        path: images/${{ matrix.component }}.png
+        path: ${{ matrix.component }}.svg
 
 
   #  conway:
