--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,7 +67,7 @@ jobs:
     steps:
       - name: Generate waveforms
         run: |
-          "ITEMS=alu control"
+          ITEMS=alu control
           for item in $ITEMS; do
             verilator --timescale 10ns/1ns --clk --assert -Wall --trace --binary cores/riscy32_single/tests/$(item)_tb.sv cores/riscy32_single/src/$(item).sv;
             ./obj_dir/V$(item)_tb
