--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,11 +50,6 @@ jobs:
         chmod -R +x /usr/local/share/verilator/*
         sudo ln -s /usr/local/share/verilator/bin/verilator /usr/local/bin/verilator
 
-    - name: Setup sooty
-      run: |
-        sudo apt-get install -y python3
-        python3 -m pip install sootty
-        mkdir waveforms
 
     - name: Run the testbench
       run: | 
@@ -65,6 +60,32 @@ jobs:
     runs-on: ubuntu-latest
     needs: riscy32_single
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Perpare for verilator
+        run: | 
+          sudo mkdir -p /usr/local/share/verilator/
+          sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/
+
+      - name: Restore Verilator Binary
+        uses: actions/cache@v4
+        with:
+          path: /usr/local/share/verilator/
+          key: verilator-binary
+
+      - name: Set up verilator
+        run: | 
+          sudo apt-get install ccache
+          chmod -R +x /usr/local/share/verilator/*
+          sudo ln -s /usr/local/share/verilator/bin/verilator /usr/local/bin/verilator
+
+      - name: Setup sooty
+        run: |
+          sudo apt-get install -y python3
+          python3 -m pip install sootty
+          mkdir waveforms
+
       - name: Generate waveforms
         run: |
           ITEMS="alu control"
