Just ALU for now

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -87,7 +87,7 @@ jobs:
 
       - name: Generate waveforms
         run: |
-          ITEMS="alu control" # Add register and memory when you know why they won't work with sootty
+          ITEMS="alu" # Add register and memory when you know why they won't work with sootty
           for item in $ITEMS; do
             verilator --timescale 10ns/1ns --assert --trace --binary cores/riscy32_single/tests/${item}_tb.sv cores/riscy32_single/src/${item}.sv
             ./obj_dir/V${item}_tb
